--- a/links-and-images/pages/about.html
+++ b/links-and-images/pages/about.html
@@ -4,13 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>About</title>
     </head>
     <body>
-        <nav>
-            <a href="index.html"> <button>Home</button> </a>
-            <a href="list.html"> <button>List</button></a>
-        </nav>
-
+        <header>
+            <h1>About Page</h1>
+        </header>
+        <section>
+            <a href="../index.html"> <- back </a>
+        </section>
+    
     </body>
 </html>
