--- a/project01-html/list/index.html
+++ b/project01-html/list/index.html
@@ -7,10 +7,6 @@
         <title>Project01-list</title>
     </head>
     <body>
-        <nav>
-            <a href="index.html"> <button>Home</button> </a>
-            <a href="list.html"> <button>List</button></a>
-        </nav>
         <!-- header created to wreap the title of the webpage -->
         <header>
             <h1>Lists</h1>
@@ -26,28 +22,28 @@
                     <ul>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-01">Ice Tea</label>
+                            <input type="checkbox" name="item-01" checked>
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-02">Guinnes</label>
+                            <input type="checkbox" name="item-02" checked>
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-03">Finger food</label>
+                            <input type="checkbox" name="item-03">
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-04">chocolate</label>
+                            <input type="checkbox" name="item-04">
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-05">pizza</label>
+                            <input type="checkbox" name="item-05" checked>
                         </li>
                     </ul>
                 </form>
@@ -61,27 +57,27 @@
                         <!-- list items  -->
                         <li>
                             <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <input type="checkbox" name="item-01" checked>
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-02">Wash the clothes</label>
+                            <input type="checkbox" name="item-02" checked>
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-03">Do the assignment</label>
+                            <input type="checkbox" name="item-03" checked>
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-04">Wash the car</label>
+                            <input type="checkbox" name="item-04">
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-05">Buy food</label>
+                            <input type="checkbox" name="item-05" checked>
                         </li>
                     </ol>
                 </form>
@@ -94,28 +90,28 @@
                     <ul>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-01">Portugal</label>
+                            <input type="checkbox" name="item-01" checked>
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-02">Germany</label>
+                            <input type="checkbox" name="item-02">
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-03">Japan</label>
+                            <input type="checkbox" name="item-03">
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-04">India</label>
+                            <input type="checkbox" name="item-04">
                         </li>
                         <!-- list items  -->
                         <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
+                            <label for="item-05">ukraine</label>
+                            <input type="checkbox" name="item-05">
                         </li>
                     </ul>
                 </form>
@@ -124,35 +120,28 @@
             <!-- An ordered list inside of an unordered list, of your all time top 5 favorite video games or movies -->
             <div class="lists-wrapper">
                 <h2>Top 5 favorite games</h2>
-                <form action="post">
-                    <ol>
-                        <!-- list items  -->
-                        <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
-                        </li>
-                        <!-- list items  -->
-                        <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
-                        </li>
-                        <!-- list items  -->
-                        <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
-                        </li>
-                        <!-- list items  -->
-                        <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
-                        </li>
-                        <!-- list items  -->
-                        <li>
-                            <label for="item-01">Buy food for Jack (my cat)</label>
-                            <input type="checkbox" name="item-01">
-                        </li>
-                    </ol>
-                </form>
+                <ol>
+                    <!-- list items  -->
+                    <li>
+                        <p>Risk</p>
+                    </li>
+                    <!-- list items  -->
+                    <li>
+                        <p>Jenga</p>
+                    </li>
+                    <!-- list items  -->
+                    <li>
+                        <p>COD</p>
+                    </li>
+                    <!-- list items  -->
+                    <li>
+                        <p>The Last Of Us</p>
+                    </li>
+                    <!-- list items  -->
+                    <li>
+                        <p>GTA</p>
+                    </li>
+                </ol>
             </div>
         </section>
     </body>
