--- a/project01-html/main-html-project/pages/hobby.html
+++ b/project01-html/main-html-project/pages/hobby.html
@@ -14,9 +14,9 @@
         </header>
         <section>
             <h3>Welcome to my hobby world</h3>
-            <p>I am a <strong>"photografer/video maker"</strong></p>
-            <p>I love to make photos of places and people (with there concern)</p>
-            <p>please, take a look some of my photos</p>
+            <p>I am a <strong>"photographer/video maker"</strong></p>
+            <p>I love to make photos of places and people (with their concerns)</p>
+            <p>please, take a look at some of my photos</p>
             <a href="https://www.instagram.com/momentnowevents" target="_blank"><img src="../images/Instagram-Icon.png" alt="Instagram Icon">  Instagram</a>
             <br>
             <br>
