--- a/project01-html/main-html-project/pages/me.html
+++ b/project01-html/main-html-project/pages/me.html
@@ -14,9 +14,9 @@
         </header>
         <section>
             <h3>Me:</h3>
-            <p> I am Bruno Martins, Born in Brazil !! an amazing and beautifull place full of friedly people</p>
-            <p>I Have decided to trevel to Ireland to study english, the idea was only stay <strong>8 months</strong> </p>
-            <p>well i am here years aready (I AM LOVING IT), well you can call me half irish already cuz ireland became my new home </p>
+            <p> I am Bruno Martins, Born in Brazil !! an amazing and beautiful place full of friendly people</p>
+            <p>I Have decided to travel to Ireland to study English, the idea was only to stay <strong>8 months</strong> </p>
+            <p>well I am here years already (I AM LOVING IT), well you can call me half Irish already cuz Ireland became my new home</p>
             
             <!-- link to go back to about -->
             <br>
