deleted others question

--- a/pages/movies.html
+++ b/pages/movies.html
@@ -16,11 +16,11 @@
             <h3>Well, I am A Giant Fan of <strong>MARVEL</strong></h3>
             <p>Please expect only Marvel movies on this list :)</p>
             <ol>
-                <li>avengers infinity war</li>
-                <li>avengers endgame</li>
-                <li>spider man no way home</li>
-                <li>wandavision</li>
-                <li>doctor strange in the multiverse of madness</li>
+                <li><p>avengers infinity war</p></li>
+                <li><p>avengers endgame</p></li>
+                <li><p>spider man no way home</p></li>
+                <li><p>wandavision</p></li>
+                <li><p>doctor strange in the multiverse of madness</p></li>
             </ol>
             <br>
             <a href="about.html"><img src="../images/back.png" alt=""> Back to about</a>
